# trailblaze-analytics

./: .env.example  .gitignore  CTO_REVIEW.md  README.md  SCHEMA_SPEC.md  SCRAPERS_STATUS.md  SESSION_SUMMARY.md  alembic.ini  dictionary_aliases.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_metric_aliases.py  0003_gmail_ingest.py  0004_canonical_oyvind_primary.py  0005_pattern1_support.py  0006_canonical_largest_value_tiebreaker.py  0007_users_and_sessions.py  0009_admin_and_profiles.py  0010_metric_narratives.py
documentation/: COMPANY_AUDIT_PARSER_TODOS.md  PHASE_1_2_5_SOURCE_PRIORITY_DESIGN.md  PHASE_2_5_DESIGN.md  PHASE_2_5_DESIGN_v2.md  RICH_EXTRACTION_NOTES.md  ROADMAP_2.md  ROADMAP_RECAP.md  TRAILBLAZE_MASTER_PLAN.md  UK_AUDIT_PARSER_TODOS.md  day3-journal-20260424.md  deployment-setup-20260424.md  mostupdateversion.md  overnight-journal-20260423.md  ui-overnight-journal-20260423.md
documentation/source_catalogues/: 00_SUMMARY.md  01_WEB_TRAFFIC.md  02_SHARE_PRICES.md  03_OFFICIAL_REPORTS.md  04_STOCK_FUNDAMENTALS.md  05_NEWS.md
documentation/ui documentation/: UI_SPEC_1_PRIMITIVES.md
scripts/: backfill.py  seed_fx_rates.py
src/trailblaze/: __init__.py  config.py
tests/beacon/: conftest.py  test_engine_betsson.py  test_engine_evolution.py  test_engine_flutter.py  test_ensemble.py  test_gap_finder.py  test_linear_trend.py  test_seasonal_index.py  test_yoy_growth.py
tests/narratives/: test_extractor.py
ui documentation/: UI_SPEC_2_KPI_PANELS.md  UI_SPEC_3_PAGE_COMPOSITIONS.md
web/: .env.local.example  .gitignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/lib/: adapters.ts  db.ts  format.ts  fx.ts  iso-3166.ts  (+3 more)
(+211 files in other folders)
