[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trailblaze-analytics"
version = "0.1.0"
description = "Trailblaze Analytics Platform — iGaming market intelligence ingest, estimates, dashboard."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Trailblaze Marketing" }]
license = { text = "Proprietary" }

dependencies = [
    "sqlalchemy>=2.0.30",
    "alembic>=1.13",
    "psycopg[binary]>=3.1.18",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "anthropic>=0.39",
    "pypdf>=4.2",
    "click>=8.1",
    "rich>=13.7",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "yfinance>=0.2.40",
    "google-api-python-client>=2.130",
    "google-auth-httplib2>=0.2",
    "google-auth-oauthlib>=1.2",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
trailblaze-parse = "trailblaze.parser.cli:main"
trailblaze-seed = "trailblaze.seed.cli:main"
trailblaze-scrape-regulators = "trailblaze.scrapers.cli_regulators:main"
trailblaze-scrape-stocks = "trailblaze.scrapers.cli_stocks:main"
trailblaze-scrape-companies = "trailblaze.scrapers.cli_companies:main"
trailblaze-scrape-gmail = "trailblaze.scrapers.cli_gmail:main"
trailblaze-beacon-compute = "trailblaze.beacon.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
